# ai-models-on-ack

./: README.md
ai-conformance/v1.34/secure_accelerator_access/: README.md
aigc/fastchat/: fastchat-deployment.yaml  fastchat-gpu.yaml  fastchat-svc.yaml  fastchat.md
aigc/langchain-chatchat/: Chart.yaml  README.md  values.yaml
aigc/qwen-7b-chat/: qwen-7b-chat-cpu.yaml  qwen-7b-chat-gpu.yaml  qwen-7b-chat.md
aigc/stable-diffusion/: sd-dreambooth.yaml  stable-diffusion-cpu.yaml  stable-diffusion-deployment-cpu.yaml  stable-diffusion-deployment-gpu.yaml  stable-diffusion-gpu.yaml  stable-diffusion-svc.yaml  stable-diffusion.md
aigc/tongyi/: Dockerfile  jupyter-notebook.yaml  notebook.yaml  tongyi.ipynb  tongyi.md
aigc/tongyi-api/: jupyter-notebook.yaml  tongyi.md
apis/: README.md  go.mod  go.sum  tools.go
apis/crd/: scheduling.alibabacloud.com_resourcepolicies.yaml
apis/hack/: update-codegen.sh  update-crd.sh
framework/jupyter/: jupyter-gpu.md  jupyter-gpu.yaml
framework/jupyter/dockerfile/: Dockerfile  (+1 more)
framework/kuberay/: head-ingress.yaml  kuberay.md  values.yaml
framework/slurm/: README.md
framework/slurm/slurm-plugins/job_submit/k8s_resource_completion_23_02_7/: Makefile  Makefile.am  Makefile.in  job_submit_k8s_resource_completion.c
framework/slurm/slurm-plugins/node_features/k8s_resources/: Makefile  Makefile.am  Makefile.in  node_features_k8s_resources.c
llm/lmdeploy/: README.md
llm/rtp-llm/: README.md
llm/sglang/: sglang-agg-qwen3-5-397B-A17B.yaml  sglang-pd-qwen3-235b.yaml
llm/vLLM/: README.md  vllm-agg-qwen3-5-397B-A17B.yaml
(+58 files in other folders)
